3B - WEB update homepage

--- a/3B-WEB/all-store.html
+++ b/3B-WEB/all-store.html
@@ -255,50 +255,214 @@
 	</header>
 	<!-- /END HEADER -->
 
+	<!-- BEGIN MAIN HEADER -->
+	<div class="content main-header">
+		<div class="container">
+			<div class="row">
+				<div class="col-md-12">
+					<ul class="menu-container">
+						<li class="icon">
+							<a href="view-all-categories.html">
+								<span class="text-on-mobile">Xem tất cả danh mục</span>
+								<img src="assets/images/svg/menu-bar.svg">
+							</a>
+						</li>
+						<li>
+							<a href="view-product-by-category.html"><span class="custom-wrap-1line">Electronic Devices<i class="fa fa-angle-down"></i></span></a>
+							<div class="menu-sub">
+								<div class="sub-row">
+									<ul class="sub-items">
+										<li class="title"><span class="custom-wrap-1line">test add thêm level 3 sau khi đã có sản phẩm ở level 2, đặt 1 cái tên thật là dài là dài để xem a Hùng hiên thị ra làm sao nào :vtest add thêm level 3 sau khi đã có sản phẩm ở level 2, đặt 1 cái tên thật là dài là dài để xem a Hùng hiên thị ra làm sao nào</span></li>
+										<li><a href="view-product-by-category.html"><span class="custom-wrap-1line">test add thêm level 3 sau khi đã có sản phẩm ở level 2, đặt 1 cái tên thật là dài là dài để xem a Hùng hiên thị ra làm sao nào :vtest add thêm level 3 sau khi đã có sản phẩm ở level 2, đặt 1 cái tên thật là dài là dài để xem a Hùng hiên thị ra làm sao nào</span></a></li>
+										<li><a href="view-product-by-category.html">Fomal shoes</a></li>
+										<li><a href="view-product-by-category.html">Sadals & Floaters</a></li>
+										<li><a href="#">Fomal shoes</a></li>
+										<li><a href="#">Sadals & Floaters </a></li>
+									</ul>
+									<ul class="sub-items">
+										<li class="title">Footwear</li>
+										<li><a href="#">Sport shoes</a></li>
+										<li><a href="#">Fomal shoes</a></li>
+										<li><a href="#">Sadals & Floaters</a></li>
+										<li><a href="#">Fomal shoes</a></li>
+										<li><a href="#">Sadals & Floaters </a></li>
+									</ul>
+									<ul class="sub-items">
+										<li class="title">Men grooming</li>
+										<li><a href="#">Sport shoes</a></li>
+										<li><a href="#">Fomal shoes</a></li>
+										<li><a href="#">Sadals & Floaters</a></li>
+										<li><a href="#">Fomal shoes</a></li>
+										<li><a href="#">Sadals & Floaters </a></li>
+									</ul>
+									<ul class="sub-items">
+										<li class="title">Footwear</li>
+										<li><a href="#">Sport shoes</a></li>
+										<li><a href="#">Fomal shoes</a></li>
+										<li><a href="#">Sadals & Floaters</a></li>
+										<li><a href="#">Fomal shoes</a></li>
+										<li><a href="#">Sadals & Floaters </a></li>
+									</ul>
+									<ul class="sub-items">
+										<li class="title">Men grooming</li>
+										<li><a href="#">Sport shoes</a></li>
+										<li><a href="#">Fomal shoes</a></li>
+										<li><a href="#">Sadals & Floaters</a></li>
+										<li><a href="#">Fomal shoes</a></li>
+										<li><a href="#">Sadals & Floaters </a></li>
+									</ul>
+								</div>
+								<div class="sub-row row2">
+									<ul class="sub-items">
+										<li class="title">Footwear</li>
+										<li><a href="#">Sport shoes</a></li>
+										<li><a href="#">Fomal shoes</a></li>
+										<li><a href="#">Sadals & Floaters</a></li>
+										<li><a href="#">Fomal shoes</a></li>
+										<li><a href="#">Sadals & Floaters </a></li>
+									</ul>
+									<ul class="sub-items">
+										<li class="title">Footwear</li>
+										<li><a href="#">Sport shoes</a></li>
+										<li><a href="#">Fomal shoes</a></li>
+										<li><a href="#">Sadals & Floaters</a></li>
+										<li><a href="#">Fomal shoes</a></li>
+										<li><a href="#">Sadals & Floaters </a></li>
+									</ul>
+									<ul class="sub-items">
+										<li class="title">Men grooming</li>
+										<li><a href="#">Sport shoes</a></li>
+										<li><a href="#">Fomal shoes</a></li>
+										<li><a href="#">Sadals & Floaters</a></li>
+										<li><a href="#">Fomal shoes</a></li>
+										<li><a href="#">Sadals & Floaters </a></li>
+									</ul>
+									<ul class="sub-items">
+										<li class="title">Footwear</li>
+										<li><a href="#">Sport shoes</a></li>
+										<li><a href="#">Fomal shoes</a></li>
+										<li><a href="#">Sadals & Floaters</a></li>
+										<li><a href="#">Fomal shoes</a></li>
+										<li><a href="#">Sadals & Floaters </a></li>
+									</ul>
+									<ul class="sub-items">
+										<li class="title">Footwear</li>
+										<li><a href="#">Sport shoes</a></li>
+										<li><a href="#">Fomal shoes</a></li>
+										<li><a href="#">Sadals & Floaters</a></li>
+										<li><a href="#">Fomal shoes</a></li>
+										<li><a href="#">Sadals & Floaters </a></li>
+									</ul>
+								</div>
+							</div>
+						</li>
+						<li><a href="#"><span class="custom-wrap-1line">TV & Appiliantion <i class="fa fa-angle-down"></i></span></a></li>
+						<li>
+							<a href="#">
+								<span class="custom-wrap-1line">test add thêm <i class="fa fa-angle-down"></i></span> 
+							</a>
+							<div class="menu-sub">
+								<div class="sub-row">
+									<ul class="sub-items">
+										<li class="title"><span class="custom-wrap-1line">test add thêm level 3 sau khi đã có sản phẩm ở level 2, đặt 1 cái tên thật là dài là dài để xem a Hùng hiên thị ra làm sao nào :vtest add thêm level 3 sau khi đã có sản phẩm ở level 2, đặt 1 cái tên thật là dài là dài để xem a Hùng hiên thị ra làm sao nào</span></li>
+										<li><a href="view-product-by-category.html"><span class="custom-wrap-1line">test add thêm level 3 sau khi đã có sản phẩm ở level 2, đặt 1 cái tên thật là dài là dài để xem a Hùng hiên thị ra làm sao nào :vtest add thêm level 3 sau khi đã có sản phẩm ở level 2, đặt 1 cái tên thật là dài là dài để xem a Hùng hiên thị ra làm sao nào</span></a></li>
+										<li><a href="view-product-by-category.html">Fomal shoes</a></li>
+										<li><a href="view-product-by-category.html">Sadals & Floaters</a></li>
+										<li><a href="#">Fomal shoes</a></li>
+										<li><a href="#">Sadals & Floaters </a></li>
+									</ul>
+									<ul class="sub-items">
+										<li class="title">Footwear</li>
+										<li><a href="#">Sport shoes</a></li>
+										<li><a href="#">Fomal shoes</a></li>
+										<li><a href="#">Sadals & Floaters</a></li>
+										<li><a href="#">Fomal shoes</a></li>
+										<li><a href="#">Sadals & Floaters </a></li>
+									</ul>
+									<ul class="sub-items">
+										<li class="title">Men grooming</li>
+										<li><a href="#">Sport shoes</a></li>
+										<li><a href="#">Fomal shoes</a></li>
+										<li><a href="#">Sadals & Floaters</a></li>
+										<li><a href="#">Fomal shoes</a></li>
+										<li><a href="#">Sadals & Floaters </a></li>
+									</ul>
+									<ul class="sub-items">
+										<li class="title">Footwear</li>
+										<li><a href="#">Sport shoes</a></li>
+										<li><a href="#">Fomal shoes</a></li>
+										<li><a href="#">Sadals & Floaters</a></li>
+										<li><a href="#">Fomal shoes</a></li>
+										<li><a href="#">Sadals & Floaters </a></li>
+									</ul>
+									<ul class="sub-items">
+										<li class="title">Men grooming</li>
+										<li><a href="#">Sport shoes</a></li>
+										<li><a href="#">Fomal shoes</a></li>
+										<li><a href="#">Sadals & Floaters</a></li>
+										<li><a href="#">Fomal shoes</a></li>
+										<li><a href="#">Sadals & Floaters </a></li>
+									</ul>
+								</div>
+								<div class="sub-row row2">
+									<ul class="sub-items">
+										<li class="title">Footwear</li>
+										<li><a href="#">Sport shoes</a></li>
+										<li><a href="#">Fomal shoes</a></li>
+										<li><a href="#">Sadals & Floaters</a></li>
+										<li><a href="#">Fomal shoes</a></li>
+										<li><a href="#">Sadals & Floaters </a></li>
+									</ul>
+									<ul class="sub-items">
+										<li class="title">Footwear</li>
+										<li><a href="#">Sport shoes</a></li>
+										<li><a href="#">Fomal shoes</a></li>
+										<li><a href="#">Sadals & Floaters</a></li>
+										<li><a href="#">Fomal shoes</a></li>
+										<li><a href="#">Sadals & Floaters </a></li>
+									</ul>
+									<ul class="sub-items">
+										<li class="title">Men grooming</li>
+										<li><a href="#">Sport shoes</a></li>
+										<li><a href="#">Fomal shoes</a></li>
+										<li><a href="#">Sadals & Floaters</a></li>
+										<li><a href="#">Fomal shoes</a></li>
+										<li><a href="#">Sadals & Floaters </a></li>
+									</ul>
+									<ul class="sub-items">
+										<li class="title">Footwear</li>
+										<li><a href="#">Sport shoes</a></li>
+										<li><a href="#">Fomal shoes</a></li>
+										<li><a href="#">Sadals & Floaters</a></li>
+										<li><a href="#">Fomal shoes</a></li>
+										<li><a href="#">Sadals & Floaters </a></li>
+									</ul>
+									<ul class="sub-items">
+										<li class="title">Footwear></li>
+										<li><a href="#">Sport shoes</a></li>
+										<li><a href="#">Fomal shoes</a></li>
+										<li><a href="#">Sadals & Floaters</a></li>
+										<li><a href="#">Fomal shoes</a></li>
+										<li><a href="#">Sadals & Floaters </a></li>
+									</ul>
+								</div>
+							</div>
+						</li>
+						<li><a href="#"><span class="custom-wrap-1line">Women <i class="fa fa-angle-down"></i></span></a></li>
+						<li><a href="#"><span class="custom-wrap-1line">Baby & Kids <i class="fa fa-angle-down"></i></span></a></li>
+						<li><a href="#"><span class="custom-wrap-1line">Home & Funiture <i class="fa fa-angle-down"></i></span></a></li>
+					</ul>
+				</div>
+				<div class="clearfix"></div>
+			</div>
+		</div>
+	</div>
+	<!-- /END MAIN HEADER -->
+
 	<div class="search-result">
 		<div class="container">
 			<div class="row">
-				<div class="col-md-3">
-					<!-- BEGIN SIDEBAR LIST CATEGORY -->
-					<div class="sidebar all-category">
-						<h4>All Category</h4>
-						<ul>
-							<li>
-								<a href="#">
-									<img src="assets/images/img14.png">
-									<h5>Computers <i class="fa fa-angle-right pull-right"></i></h5>
-								</a>
-							</li>
-							<li>
-								<a href="#">
-									<img src="assets/images/img14.png">
-									<h5>Computers <i class="fa fa-angle-right pull-right"></i></h5>
-								</a>
-							</li>
-							<li>
-								<a href="#">
-									<img src="assets/images/img14.png">
-									<h5>Computers <i class="fa fa-angle-right pull-right"></i></h5>
-								</a>
-							</li>
-							<li>
-								<a href="#">
-									<img src="assets/images/img14.png">
-									<h5>Computers <i class="fa fa-angle-right pull-right"></i></h5>
-								</a>
-							</li>
-							<li>
-								<a href="#">
-									<img src="assets/images/img14.png">
-									<h5>Computers <i class="fa fa-angle-right pull-right"></i></h5>
-								</a>
-							</li>
-						</ul>
-					</div>
-					<!-- /END SIDEBAR LIST CATEGORY -->
-				</div>
-
-				<div class="col-md-9">
+				<div class="col-md-12">
 					<!-- BEGIN LIST STORE -->
 					<div class="list-store store">
 						<div class="col-md-4">
