--- a/3B-WEB/home.html
+++ b/3B-WEB/home.html
@@ -490,24 +490,52 @@
 				<div class="col-md-12">
 					<ul>
 						<li>
-							<img src="assets/images/svg/clock.svg">
-							<span>Golden Hours</span>
+							<a href="#">
+								<img src="assets/images/svg/clock.svg">
+								<span>Giờ vàng</span>
+							</a>
 						</li>
 						<li>
-							<img src="assets/images/svg/delivery-truck.svg">
-							<span>Outlet</span>
+							<a href="#">
+								<img src="assets/images/svg/delivery-truck.svg">
+								<span>Sale lẻ size</span>
+							</a>
 						</li>
 						<li>
-							<img src="assets/images/svg/shopping-bag.svg">
-							<span>Brand Items</span>
+							<a href="#">
+								<img src="assets/images/svg/shopping-bag.svg">
+								<span>Thương hiệu</span>
+							</a>
 						</li>
 						<li>
-							<img src="assets/images/svg/mobile-store.svg">
-							<span>Best Store</span>
+							<a href="#">
+								<img src="assets/images/svg/mobile-store.svg">
+								<span>Cửa hàng tốt</span>
+							</a>
 						</li>
 						<li>
-							<img src="assets/images/svg/coupon.svg">
-							<span>Voucher</span>
+							<a href="#">
+								<img src="assets/images/svg/1k.svg">
+								<span>From 1k</span>
+							</a>
+						</li>
+						<li>
+							<a href="#">
+								<img src="assets/images/svg/fruit.svg">
+								<span>Trái cây</span>
+							</a>
+						</li>
+						<li>
+							<a href="#">
+								<img src="assets/images/svg/food.svg">
+								<span>Thực phẩm</span>
+							</a>
+						</li>
+						<li>
+							<a href="#">
+								<img src="assets/images/svg/union.svg">
+								<span>Phụ kiện ô tô</span>
+							</a>
 						</li>
 					</ul>
 				</div>
@@ -793,6 +821,368 @@
 				</div>
 				<div class="clearfix"></div>
 				<!-- /END SELETED STORES -->
+
+				<!-- BEGIN HOT PRODUCTS TODAY -->
+				<div class="col-md-12 margin-b20">
+					<h4 class="margin-b20"><span><img src="assets/images/fire.png"></span> Hàng hot hôm nay</h4>
+					
+					<div class="row">
+						<div class="col-md-2 col-sm-4 col-xs-6">
+							<!-- PRODUCT ITEM -->
+							<div class="product-item">
+								<a href="#">
+									<img src="assets/images/img4.png">
+								</a>
+								<div class="product-info">
+									<div class="store-name">
+										<img src="assets/images/store-logo-sm.png">
+										<h5>Clever Hippo</h5>
+									</div>
+									<a href="#"><h4 class="transition">Nombined strapped backpack</h4></a>
+									<div class="rating">
+										<div class="pull-left">
+											<img src="assets/images/svg/star-1.svg">
+											<span class="point">4.0</span>
+											<span class="count">(200 ratings)</span>
+										</div>
+										<div class="pull-right"><span class="rating-label">-50%</span></div>
+										<div class="clearfix"></div>
+									</div>
+									<div class="product-meta">
+										<span>$125,00</span>
+										<span class="sale">$225,00</span>
+									</div>
+								</div>
+							</div>
+							<!-- /END PRODUCT ITEM -->
+						</div>
+						<div class="col-md-2 col-sm-4 col-xs-6">
+							<!-- PRODUCT ITEM -->
+							<div class="product-item">
+								<a href="#">
+									<img src="assets/images/img4.png">
+								</a>
+								<div class="product-info">
+									<div class="store-name">
+										<img src="assets/images/store-logo-sm.png">
+										<h5>Clever Hippo</h5>
+									</div>
+									<a href="#"><h4 class="transition">Nombined strapped backpack</h4></a>
+									<div class="rating">
+										<div class="pull-left">
+											<img src="assets/images/svg/star-1.svg">
+											<span class="point">4.0</span>
+											<span class="count">(200 ratings)</span>
+										</div>
+										<div class="pull-right"><span class="rating-label">-50%</span></div>
+										<div class="clearfix"></div>
+									</div>
+									<div class="product-meta">
+										<span>$125,00</span>
+										<span class="sale">$225,00</span>
+									</div>
+								</div>
+							</div>
+							<!-- /END PRODUCT ITEM -->
+						</div>
+						<div class="col-md-2 col-sm-4 col-xs-6">
+							<!-- PRODUCT ITEM -->
+							<div class="product-item">
+								<a href="#">
+									<img src="assets/images/img4.png">
+								</a>
+								<div class="product-info">
+									<div class="store-name">
+										<img src="assets/images/store-logo-sm.png">
+										<h5>Clever Hippo</h5>
+									</div>
+									<a href="#"><h4 class="transition">Nombined strapped backpack</h4></a>
+									<div class="rating">
+										<div class="pull-left">
+											<img src="assets/images/svg/star-1.svg">
+											<span class="point">4.0</span>
+											<span class="count">(200 ratings)</span>
+										</div>
+										<div class="pull-right"><span class="rating-label">-50%</span></div>
+										<div class="clearfix"></div>
+									</div>
+									<div class="product-meta">
+										<span>$125,00</span>
+										<span class="sale">$225,00</span>
+									</div>
+								</div>
+							</div>
+							<!-- /END PRODUCT ITEM -->
+						</div>
+						<div class="col-md-2 col-sm-4 col-xs-6">
+							<!-- PRODUCT ITEM -->
+							<div class="product-item">
+								<a href="#">
+									<img src="assets/images/img4.png">
+								</a>
+								<div class="product-info">
+									<div class="store-name">
+										<img src="assets/images/store-logo-sm.png">
+										<h5>Clever Hippo</h5>
+									</div>
+									<a href="#"><h4 class="transition">Nombined strapped backpack</h4></a>
+									<div class="rating">
+										<div class="pull-left">
+											<img src="assets/images/svg/star-1.svg">
+											<span class="point">4.0</span>
+											<span class="count">(200 ratings)</span>
+										</div>
+										<div class="pull-right"><span class="rating-label">-50%</span></div>
+										<div class="clearfix"></div>
+									</div>
+									<div class="product-meta">
+										<span>$125,00</span>
+										<span class="sale">$225,00</span>
+									</div>
+								</div>
+							</div>
+							<!-- /END PRODUCT ITEM -->
+						</div>
+						<div class="col-md-2 col-sm-4 col-xs-6">
+							<!-- PRODUCT ITEM -->
+							<div class="product-item">
+								<a href="#">
+									<img src="assets/images/img4.png">
+								</a>
+								<div class="product-info">
+									<div class="store-name">
+										<img src="assets/images/store-logo-sm.png">
+										<h5>Clever Hippo</h5>
+									</div>
+									<a href="#"><h4 class="transition">Nombined strapped backpack</h4></a>
+									<div class="rating">
+										<div class="pull-left">
+											<img src="assets/images/svg/star-1.svg">
+											<span class="point">4.0</span>
+											<span class="count">(200 ratings)</span>
+										</div>
+										<div class="pull-right"><span class="rating-label">-50%</span></div>
+										<div class="clearfix"></div>
+									</div>
+									<div class="product-meta">
+										<span>$125,00</span>
+										<span class="sale">$225,00</span>
+									</div>
+								</div>
+							</div>
+							<!-- /END PRODUCT ITEM -->
+						</div>
+						<div class="col-md-2 col-sm-4 col-xs-6">
+							<!-- PRODUCT ITEM -->
+							<div class="product-item">
+								<a href="#">
+									<img src="assets/images/img4.png">
+								</a>
+								<div class="product-info">
+									<div class="store-name">
+										<img src="assets/images/store-logo-sm.png">
+										<h5>Clever Hippo</h5>
+									</div>
+									<a href="#"><h4 class="transition">Nombined strapped backpack</h4></a>
+									<div class="rating">
+										<div class="pull-left">
+											<img src="assets/images/svg/star-1.svg">
+											<span class="point">4.0</span>
+											<span class="count">(200 ratings)</span>
+										</div>
+										<div class="pull-right"><span class="rating-label">-50%</span></div>
+										<div class="clearfix"></div>
+									</div>
+									<div class="product-meta">
+										<span>$125,00</span>
+										<span class="sale">$225,00</span>
+									</div>
+								</div>
+							</div>
+							<!-- /END PRODUCT ITEM -->
+						</div>
+						<div class="col-md-2 col-sm-4 col-xs-6">
+							<!-- PRODUCT ITEM -->
+							<div class="product-item">
+								<a href="#">
+									<img src="assets/images/img4.png">
+								</a>
+								<div class="product-info">
+									<div class="store-name">
+										<img src="assets/images/store-logo-sm.png">
+										<h5>Clever Hippo</h5>
+									</div>
+									<a href="#"><h4 class="transition">Nombined strapped backpack</h4></a>
+									<div class="rating">
+										<div class="pull-left">
+											<img src="assets/images/svg/star-1.svg">
+											<span class="point">4.0</span>
+											<span class="count">(200 ratings)</span>
+										</div>
+										<div class="pull-right"><span class="rating-label">-50%</span></div>
+										<div class="clearfix"></div>
+									</div>
+									<div class="product-meta">
+										<span>$125,00</span>
+										<span class="sale">$225,00</span>
+									</div>
+								</div>
+							</div>
+							<!-- /END PRODUCT ITEM -->
+						</div>
+						<div class="col-md-2 col-sm-4 col-xs-6">
+							<!-- PRODUCT ITEM -->
+							<div class="product-item">
+								<a href="#">
+									<img src="assets/images/img4.png">
+								</a>
+								<div class="product-info">
+									<div class="store-name">
+										<img src="assets/images/store-logo-sm.png">
+										<h5>Clever Hippo</h5>
+									</div>
+									<a href="#"><h4 class="transition">Nombined strapped backpack</h4></a>
+									<div class="rating">
+										<div class="pull-left">
+											<img src="assets/images/svg/star-1.svg">
+											<span class="point">4.0</span>
+											<span class="count">(200 ratings)</span>
+										</div>
+										<div class="pull-right"><span class="rating-label">-50%</span></div>
+										<div class="clearfix"></div>
+									</div>
+									<div class="product-meta">
+										<span>$125,00</span>
+										<span class="sale">$225,00</span>
+									</div>
+								</div>
+							</div>
+							<!-- /END PRODUCT ITEM -->
+						</div>
+						<div class="col-md-2 col-sm-4 col-xs-6">
+							<!-- PRODUCT ITEM -->
+							<div class="product-item">
+								<a href="#">
+									<img src="assets/images/img4.png">
+								</a>
+								<div class="product-info">
+									<div class="store-name">
+										<img src="assets/images/store-logo-sm.png">
+										<h5>Clever Hippo</h5>
+									</div>
+									<a href="#"><h4 class="transition">Nombined strapped backpack</h4></a>
+									<div class="rating">
+										<div class="pull-left">
+											<img src="assets/images/svg/star-1.svg">
+											<span class="point">4.0</span>
+											<span class="count">(200 ratings)</span>
+										</div>
+										<div class="pull-right"><span class="rating-label">-50%</span></div>
+										<div class="clearfix"></div>
+									</div>
+									<div class="product-meta">
+										<span>$125,00</span>
+										<span class="sale">$225,00</span>
+									</div>
+								</div>
+							</div>
+							<!-- /END PRODUCT ITEM -->
+						</div>
+						<div class="col-md-2 col-sm-4 col-xs-6">
+							<!-- PRODUCT ITEM -->
+							<div class="product-item">
+								<a href="#">
+									<img src="assets/images/img4.png">
+								</a>
+								<div class="product-info">
+									<div class="store-name">
+										<img src="assets/images/store-logo-sm.png">
+										<h5>Clever Hippo</h5>
+									</div>
+									<a href="#"><h4 class="transition">Nombined strapped backpack</h4></a>
+									<div class="rating">
+										<div class="pull-left">
+											<img src="assets/images/svg/star-1.svg">
+											<span class="point">4.0</span>
+											<span class="count">(200 ratings)</span>
+										</div>
+										<div class="pull-right"><span class="rating-label">-50%</span></div>
+										<div class="clearfix"></div>
+									</div>
+									<div class="product-meta">
+										<span>$125,00</span>
+										<span class="sale">$225,00</span>
+									</div>
+								</div>
+							</div>
+							<!-- /END PRODUCT ITEM -->
+						</div>
+						<div class="col-md-2 col-sm-4 col-xs-6">
+							<!-- PRODUCT ITEM -->
+							<div class="product-item">
+								<a href="#">
+									<img src="assets/images/img4.png">
+								</a>
+								<div class="product-info">
+									<div class="store-name">
+										<img src="assets/images/store-logo-sm.png">
+										<h5>Clever Hippo</h5>
+									</div>
+									<a href="#"><h4 class="transition">Nombined strapped backpack</h4></a>
+									<div class="rating">
+										<div class="pull-left">
+											<img src="assets/images/svg/star-1.svg">
+											<span class="point">4.0</span>
+											<span class="count">(200 ratings)</span>
+										</div>
+										<div class="pull-right"><span class="rating-label">-50%</span></div>
+										<div class="clearfix"></div>
+									</div>
+									<div class="product-meta">
+										<span>$125,00</span>
+										<span class="sale">$225,00</span>
+									</div>
+								</div>
+							</div>
+							<!-- /END PRODUCT ITEM -->
+						</div>
+						<div class="col-md-2 col-sm-4 col-xs-6">
+							<!-- PRODUCT ITEM -->
+							<div class="product-item">
+								<a href="#">
+									<img src="assets/images/img4.png">
+								</a>
+								<div class="product-info">
+									<div class="store-name">
+										<img src="assets/images/store-logo-sm.png">
+										<h5>Clever Hippo</h5>
+									</div>
+									<a href="#"><h4 class="transition">Nombined strapped backpack</h4></a>
+									<div class="rating">
+										<div class="pull-left">
+											<img src="assets/images/svg/star-1.svg">
+											<span class="point">4.0</span>
+											<span class="count">(200 ratings)</span>
+										</div>
+										<div class="pull-right"><span class="rating-label">-50%</span></div>
+										<div class="clearfix"></div>
+									</div>
+									<div class="product-meta">
+										<span>$125,00</span>
+										<span class="sale">$225,00</span>
+									</div>
+								</div>
+							</div>
+							<!-- /END PRODUCT ITEM -->
+						</div>
+					</div>
+					<div class="row">
+						<div class="col-md-12 txt-center">
+							<a href="product-hot-today.html" class="btn btn-loadmore btn-perspective">View all</a>
+						</div>
+					</div>
+				</div>
+				<!-- END HOT PRODUCTS TODAY -->
 
 				<!-- BEGIN RECOMMENED PRODUCTS -->
 				<div class="col-md-12">
