--- a/3B-WEB/brand-item.html
+++ b/3B-WEB/brand-item.html
@@ -255,6 +255,210 @@
 	</header>
 	<!-- /END HEADER -->
 
+	<!-- BEGIN MAIN HEADER -->
+	<div class="content main-header">
+		<div class="container">
+			<div class="row">
+				<div class="col-md-12">
+					<ul class="menu-container">
+						<li class="icon">
+							<a href="view-all-categories.html">
+								<span class="text-on-mobile">Xem tất cả danh mục</span>
+								<img src="assets/images/svg/menu-bar.svg">
+							</a>
+						</li>
+						<li>
+							<a href="view-product-by-category.html"><span class="custom-wrap-1line">Electronic Devices<i class="fa fa-angle-down"></i></span></a>
+							<div class="menu-sub">
+								<div class="sub-row">
+									<ul class="sub-items">
+										<li class="title"><span class="custom-wrap-1line">test add thêm level 3 sau khi đã có sản phẩm ở level 2, đặt 1 cái tên thật là dài là dài để xem a Hùng hiên thị ra làm sao nào :vtest add thêm level 3 sau khi đã có sản phẩm ở level 2, đặt 1 cái tên thật là dài là dài để xem a Hùng hiên thị ra làm sao nào</span></li>
+										<li><a href="view-product-by-category.html"><span class="custom-wrap-1line">test add thêm level 3 sau khi đã có sản phẩm ở level 2, đặt 1 cái tên thật là dài là dài để xem a Hùng hiên thị ra làm sao nào :vtest add thêm level 3 sau khi đã có sản phẩm ở level 2, đặt 1 cái tên thật là dài là dài để xem a Hùng hiên thị ra làm sao nào</span></a></li>
+										<li><a href="view-product-by-category.html">Fomal shoes</a></li>
+										<li><a href="view-product-by-category.html">Sadals & Floaters</a></li>
+										<li><a href="#">Fomal shoes</a></li>
+										<li><a href="#">Sadals & Floaters </a></li>
+									</ul>
+									<ul class="sub-items">
+										<li class="title">Footwear</li>
+										<li><a href="#">Sport shoes</a></li>
+										<li><a href="#">Fomal shoes</a></li>
+										<li><a href="#">Sadals & Floaters</a></li>
+										<li><a href="#">Fomal shoes</a></li>
+										<li><a href="#">Sadals & Floaters </a></li>
+									</ul>
+									<ul class="sub-items">
+										<li class="title">Men grooming</li>
+										<li><a href="#">Sport shoes</a></li>
+										<li><a href="#">Fomal shoes</a></li>
+										<li><a href="#">Sadals & Floaters</a></li>
+										<li><a href="#">Fomal shoes</a></li>
+										<li><a href="#">Sadals & Floaters </a></li>
+									</ul>
+									<ul class="sub-items">
+										<li class="title">Footwear</li>
+										<li><a href="#">Sport shoes</a></li>
+										<li><a href="#">Fomal shoes</a></li>
+										<li><a href="#">Sadals & Floaters</a></li>
+										<li><a href="#">Fomal shoes</a></li>
+										<li><a href="#">Sadals & Floaters </a></li>
+									</ul>
+									<ul class="sub-items">
+										<li class="title">Men grooming</li>
+										<li><a href="#">Sport shoes</a></li>
+										<li><a href="#">Fomal shoes</a></li>
+										<li><a href="#">Sadals & Floaters</a></li>
+										<li><a href="#">Fomal shoes</a></li>
+										<li><a href="#">Sadals & Floaters </a></li>
+									</ul>
+								</div>
+								<div class="sub-row row2">
+									<ul class="sub-items">
+										<li class="title">Footwear</li>
+										<li><a href="#">Sport shoes</a></li>
+										<li><a href="#">Fomal shoes</a></li>
+										<li><a href="#">Sadals & Floaters</a></li>
+										<li><a href="#">Fomal shoes</a></li>
+										<li><a href="#">Sadals & Floaters </a></li>
+									</ul>
+									<ul class="sub-items">
+										<li class="title">Footwear</li>
+										<li><a href="#">Sport shoes</a></li>
+										<li><a href="#">Fomal shoes</a></li>
+										<li><a href="#">Sadals & Floaters</a></li>
+										<li><a href="#">Fomal shoes</a></li>
+										<li><a href="#">Sadals & Floaters </a></li>
+									</ul>
+									<ul class="sub-items">
+										<li class="title">Men grooming</li>
+										<li><a href="#">Sport shoes</a></li>
+										<li><a href="#">Fomal shoes</a></li>
+										<li><a href="#">Sadals & Floaters</a></li>
+										<li><a href="#">Fomal shoes</a></li>
+										<li><a href="#">Sadals & Floaters </a></li>
+									</ul>
+									<ul class="sub-items">
+										<li class="title">Footwear</li>
+										<li><a href="#">Sport shoes</a></li>
+										<li><a href="#">Fomal shoes</a></li>
+										<li><a href="#">Sadals & Floaters</a></li>
+										<li><a href="#">Fomal shoes</a></li>
+										<li><a href="#">Sadals & Floaters </a></li>
+									</ul>
+									<ul class="sub-items">
+										<li class="title">Footwear</li>
+										<li><a href="#">Sport shoes</a></li>
+										<li><a href="#">Fomal shoes</a></li>
+										<li><a href="#">Sadals & Floaters</a></li>
+										<li><a href="#">Fomal shoes</a></li>
+										<li><a href="#">Sadals & Floaters </a></li>
+									</ul>
+								</div>
+							</div>
+						</li>
+						<li><a href="#"><span class="custom-wrap-1line">TV & Appiliantion <i class="fa fa-angle-down"></i></span></a></li>
+						<li>
+							<a href="#">
+								<span class="custom-wrap-1line">test add thêm <i class="fa fa-angle-down"></i></span> 
+							</a>
+							<div class="menu-sub">
+								<div class="sub-row">
+									<ul class="sub-items">
+										<li class="title"><span class="custom-wrap-1line">test add thêm level 3 sau khi đã có sản phẩm ở level 2, đặt 1 cái tên thật là dài là dài để xem a Hùng hiên thị ra làm sao nào :vtest add thêm level 3 sau khi đã có sản phẩm ở level 2, đặt 1 cái tên thật là dài là dài để xem a Hùng hiên thị ra làm sao nào</span></li>
+										<li><a href="view-product-by-category.html"><span class="custom-wrap-1line">test add thêm level 3 sau khi đã có sản phẩm ở level 2, đặt 1 cái tên thật là dài là dài để xem a Hùng hiên thị ra làm sao nào :vtest add thêm level 3 sau khi đã có sản phẩm ở level 2, đặt 1 cái tên thật là dài là dài để xem a Hùng hiên thị ra làm sao nào</span></a></li>
+										<li><a href="view-product-by-category.html">Fomal shoes</a></li>
+										<li><a href="view-product-by-category.html">Sadals & Floaters</a></li>
+										<li><a href="#">Fomal shoes</a></li>
+										<li><a href="#">Sadals & Floaters </a></li>
+									</ul>
+									<ul class="sub-items">
+										<li class="title">Footwear</li>
+										<li><a href="#">Sport shoes</a></li>
+										<li><a href="#">Fomal shoes</a></li>
+										<li><a href="#">Sadals & Floaters</a></li>
+										<li><a href="#">Fomal shoes</a></li>
+										<li><a href="#">Sadals & Floaters </a></li>
+									</ul>
+									<ul class="sub-items">
+										<li class="title">Men grooming</li>
+										<li><a href="#">Sport shoes</a></li>
+										<li><a href="#">Fomal shoes</a></li>
+										<li><a href="#">Sadals & Floaters</a></li>
+										<li><a href="#">Fomal shoes</a></li>
+										<li><a href="#">Sadals & Floaters </a></li>
+									</ul>
+									<ul class="sub-items">
+										<li class="title">Footwear</li>
+										<li><a href="#">Sport shoes</a></li>
+										<li><a href="#">Fomal shoes</a></li>
+										<li><a href="#">Sadals & Floaters</a></li>
+										<li><a href="#">Fomal shoes</a></li>
+										<li><a href="#">Sadals & Floaters </a></li>
+									</ul>
+									<ul class="sub-items">
+										<li class="title">Men grooming</li>
+										<li><a href="#">Sport shoes</a></li>
+										<li><a href="#">Fomal shoes</a></li>
+										<li><a href="#">Sadals & Floaters</a></li>
+										<li><a href="#">Fomal shoes</a></li>
+										<li><a href="#">Sadals & Floaters </a></li>
+									</ul>
+								</div>
+								<div class="sub-row row2">
+									<ul class="sub-items">
+										<li class="title">Footwear</li>
+										<li><a href="#">Sport shoes</a></li>
+										<li><a href="#">Fomal shoes</a></li>
+										<li><a href="#">Sadals & Floaters</a></li>
+										<li><a href="#">Fomal shoes</a></li>
+										<li><a href="#">Sadals & Floaters </a></li>
+									</ul>
+									<ul class="sub-items">
+										<li class="title">Footwear</li>
+										<li><a href="#">Sport shoes</a></li>
+										<li><a href="#">Fomal shoes</a></li>
+										<li><a href="#">Sadals & Floaters</a></li>
+										<li><a href="#">Fomal shoes</a></li>
+										<li><a href="#">Sadals & Floaters </a></li>
+									</ul>
+									<ul class="sub-items">
+										<li class="title">Men grooming</li>
+										<li><a href="#">Sport shoes</a></li>
+										<li><a href="#">Fomal shoes</a></li>
+										<li><a href="#">Sadals & Floaters</a></li>
+										<li><a href="#">Fomal shoes</a></li>
+										<li><a href="#">Sadals & Floaters </a></li>
+									</ul>
+									<ul class="sub-items">
+										<li class="title">Footwear</li>
+										<li><a href="#">Sport shoes</a></li>
+										<li><a href="#">Fomal shoes</a></li>
+										<li><a href="#">Sadals & Floaters</a></li>
+										<li><a href="#">Fomal shoes</a></li>
+										<li><a href="#">Sadals & Floaters </a></li>
+									</ul>
+									<ul class="sub-items">
+										<li class="title">Footwear></li>
+										<li><a href="#">Sport shoes</a></li>
+										<li><a href="#">Fomal shoes</a></li>
+										<li><a href="#">Sadals & Floaters</a></li>
+										<li><a href="#">Fomal shoes</a></li>
+										<li><a href="#">Sadals & Floaters </a></li>
+									</ul>
+								</div>
+							</div>
+						</li>
+						<li><a href="#"><span class="custom-wrap-1line">Women <i class="fa fa-angle-down"></i></span></a></li>
+						<li><a href="#"><span class="custom-wrap-1line">Baby & Kids <i class="fa fa-angle-down"></i></span></a></li>
+						<li><a href="#"><span class="custom-wrap-1line">Home & Funiture <i class="fa fa-angle-down"></i></span></a></li>
+					</ul>
+				</div>
+				<div class="clearfix"></div>
+			</div>
+		</div>
+	</div>
+	<!-- /END MAIN HEADER -->
+
 	<div class="search-result brand-item">
 		<div class="container">
 			<div class="row">
