3B - WEB - update homepage

--- a/3B-WEB/home.html
+++ b/3B-WEB/home.html
@@ -824,7 +824,7 @@
 
 				<!-- BEGIN HOT PRODUCTS TODAY -->
 				<div class="col-md-12 margin-b20">
-					<h4 class="margin-b20"><span><img src="assets/images/fire.png"></span> Hàng hot hôm nay</h4>
+					<h4 class="margin-b20 custom-title"><img src="assets/images/svg/flame.svg"> Hàng hot hôm nay</h4>
 					
 					<div class="row">
 						<div class="col-md-2 col-sm-4 col-xs-6">
@@ -1176,13 +1176,377 @@
 							<!-- /END PRODUCT ITEM -->
 						</div>
 					</div>
+
 					<div class="row">
 						<div class="col-md-12 txt-center">
-							<a href="product-hot-today.html" class="btn btn-loadmore btn-perspective">View all</a>
+							<button class="btn btn-loadmore btn-perspective">View all</button>
 						</div>
 					</div>
 				</div>
 				<!-- END HOT PRODUCTS TODAY -->
+
+				<!-- BEGIN IDEA PRODUCTS TODAY -->
+				<div class="col-md-12 margin-b20">
+					<h4 class="margin-b20 custom-title"><img src="assets/images/svg/idea.svg"> Gợi ý hôm nay</h4>
+					
+					<div class="row">
+						<div class="col-md-2 col-sm-4 col-xs-6">
+							<!-- PRODUCT ITEM -->
+							<div class="product-item">
+								<a href="#">
+									<img src="assets/images/img4.png">
+								</a>
+								<div class="product-info">
+									<div class="store-name">
+										<img src="assets/images/store-logo-sm.png">
+										<h5>Clever Hippo</h5>
+									</div>
+									<a href="#"><h4 class="transition">Nombined strapped backpack</h4></a>
+									<div class="rating">
+										<div class="pull-left">
+											<img src="assets/images/svg/star-1.svg">
+											<span class="point">4.0</span>
+											<span class="count">(200 ratings)</span>
+										</div>
+										<div class="pull-right"><span class="rating-label">-50%</span></div>
+										<div class="clearfix"></div>
+									</div>
+									<div class="product-meta">
+										<span>$125,00</span>
+										<span class="sale">$225,00</span>
+									</div>
+								</div>
+							</div>
+							<!-- /END PRODUCT ITEM -->
+						</div>
+						<div class="col-md-2 col-sm-4 col-xs-6">
+							<!-- PRODUCT ITEM -->
+							<div class="product-item">
+								<a href="#">
+									<img src="assets/images/img4.png">
+								</a>
+								<div class="product-info">
+									<div class="store-name">
+										<img src="assets/images/store-logo-sm.png">
+										<h5>Clever Hippo</h5>
+									</div>
+									<a href="#"><h4 class="transition">Nombined strapped backpack</h4></a>
+									<div class="rating">
+										<div class="pull-left">
+											<img src="assets/images/svg/star-1.svg">
+											<span class="point">4.0</span>
+											<span class="count">(200 ratings)</span>
+										</div>
+										<div class="pull-right"><span class="rating-label">-50%</span></div>
+										<div class="clearfix"></div>
+									</div>
+									<div class="product-meta">
+										<span>$125,00</span>
+										<span class="sale">$225,00</span>
+									</div>
+								</div>
+							</div>
+							<!-- /END PRODUCT ITEM -->
+						</div>
+						<div class="col-md-2 col-sm-4 col-xs-6">
+							<!-- PRODUCT ITEM -->
+							<div class="product-item">
+								<a href="#">
+									<img src="assets/images/img4.png">
+								</a>
+								<div class="product-info">
+									<div class="store-name">
+										<img src="assets/images/store-logo-sm.png">
+										<h5>Clever Hippo</h5>
+									</div>
+									<a href="#"><h4 class="transition">Nombined strapped backpack</h4></a>
+									<div class="rating">
+										<div class="pull-left">
+											<img src="assets/images/svg/star-1.svg">
+											<span class="point">4.0</span>
+											<span class="count">(200 ratings)</span>
+										</div>
+										<div class="pull-right"><span class="rating-label">-50%</span></div>
+										<div class="clearfix"></div>
+									</div>
+									<div class="product-meta">
+										<span>$125,00</span>
+										<span class="sale">$225,00</span>
+									</div>
+								</div>
+							</div>
+							<!-- /END PRODUCT ITEM -->
+						</div>
+						<div class="col-md-2 col-sm-4 col-xs-6">
+							<!-- PRODUCT ITEM -->
+							<div class="product-item">
+								<a href="#">
+									<img src="assets/images/img4.png">
+								</a>
+								<div class="product-info">
+									<div class="store-name">
+										<img src="assets/images/store-logo-sm.png">
+										<h5>Clever Hippo</h5>
+									</div>
+									<a href="#"><h4 class="transition">Nombined strapped backpack</h4></a>
+									<div class="rating">
+										<div class="pull-left">
+											<img src="assets/images/svg/star-1.svg">
+											<span class="point">4.0</span>
+											<span class="count">(200 ratings)</span>
+										</div>
+										<div class="pull-right"><span class="rating-label">-50%</span></div>
+										<div class="clearfix"></div>
+									</div>
+									<div class="product-meta">
+										<span>$125,00</span>
+										<span class="sale">$225,00</span>
+									</div>
+								</div>
+							</div>
+							<!-- /END PRODUCT ITEM -->
+						</div>
+						<div class="col-md-2 col-sm-4 col-xs-6">
+							<!-- PRODUCT ITEM -->
+							<div class="product-item">
+								<a href="#">
+									<img src="assets/images/img4.png">
+								</a>
+								<div class="product-info">
+									<div class="store-name">
+										<img src="assets/images/store-logo-sm.png">
+										<h5>Clever Hippo</h5>
+									</div>
+									<a href="#"><h4 class="transition">Nombined strapped backpack</h4></a>
+									<div class="rating">
+										<div class="pull-left">
+											<img src="assets/images/svg/star-1.svg">
+											<span class="point">4.0</span>
+											<span class="count">(200 ratings)</span>
+										</div>
+										<div class="pull-right"><span class="rating-label">-50%</span></div>
+										<div class="clearfix"></div>
+									</div>
+									<div class="product-meta">
+										<span>$125,00</span>
+										<span class="sale">$225,00</span>
+									</div>
+								</div>
+							</div>
+							<!-- /END PRODUCT ITEM -->
+						</div>
+						<div class="col-md-2 col-sm-4 col-xs-6">
+							<!-- PRODUCT ITEM -->
+							<div class="product-item">
+								<a href="#">
+									<img src="assets/images/img4.png">
+								</a>
+								<div class="product-info">
+									<div class="store-name">
+										<img src="assets/images/store-logo-sm.png">
+										<h5>Clever Hippo</h5>
+									</div>
+									<a href="#"><h4 class="transition">Nombined strapped backpack</h4></a>
+									<div class="rating">
+										<div class="pull-left">
+											<img src="assets/images/svg/star-1.svg">
+											<span class="point">4.0</span>
+											<span class="count">(200 ratings)</span>
+										</div>
+										<div class="pull-right"><span class="rating-label">-50%</span></div>
+										<div class="clearfix"></div>
+									</div>
+									<div class="product-meta">
+										<span>$125,00</span>
+										<span class="sale">$225,00</span>
+									</div>
+								</div>
+							</div>
+							<!-- /END PRODUCT ITEM -->
+						</div>
+						<div class="col-md-2 col-sm-4 col-xs-6">
+							<!-- PRODUCT ITEM -->
+							<div class="product-item">
+								<a href="#">
+									<img src="assets/images/img4.png">
+								</a>
+								<div class="product-info">
+									<div class="store-name">
+										<img src="assets/images/store-logo-sm.png">
+										<h5>Clever Hippo</h5>
+									</div>
+									<a href="#"><h4 class="transition">Nombined strapped backpack</h4></a>
+									<div class="rating">
+										<div class="pull-left">
+											<img src="assets/images/svg/star-1.svg">
+											<span class="point">4.0</span>
+											<span class="count">(200 ratings)</span>
+										</div>
+										<div class="pull-right"><span class="rating-label">-50%</span></div>
+										<div class="clearfix"></div>
+									</div>
+									<div class="product-meta">
+										<span>$125,00</span>
+										<span class="sale">$225,00</span>
+									</div>
+								</div>
+							</div>
+							<!-- /END PRODUCT ITEM -->
+						</div>
+						<div class="col-md-2 col-sm-4 col-xs-6">
+							<!-- PRODUCT ITEM -->
+							<div class="product-item">
+								<a href="#">
+									<img src="assets/images/img4.png">
+								</a>
+								<div class="product-info">
+									<div class="store-name">
+										<img src="assets/images/store-logo-sm.png">
+										<h5>Clever Hippo</h5>
+									</div>
+									<a href="#"><h4 class="transition">Nombined strapped backpack</h4></a>
+									<div class="rating">
+										<div class="pull-left">
+											<img src="assets/images/svg/star-1.svg">
+											<span class="point">4.0</span>
+											<span class="count">(200 ratings)</span>
+										</div>
+										<div class="pull-right"><span class="rating-label">-50%</span></div>
+										<div class="clearfix"></div>
+									</div>
+									<div class="product-meta">
+										<span>$125,00</span>
+										<span class="sale">$225,00</span>
+									</div>
+								</div>
+							</div>
+							<!-- /END PRODUCT ITEM -->
+						</div>
+						<div class="col-md-2 col-sm-4 col-xs-6">
+							<!-- PRODUCT ITEM -->
+							<div class="product-item">
+								<a href="#">
+									<img src="assets/images/img4.png">
+								</a>
+								<div class="product-info">
+									<div class="store-name">
+										<img src="assets/images/store-logo-sm.png">
+										<h5>Clever Hippo</h5>
+									</div>
+									<a href="#"><h4 class="transition">Nombined strapped backpack</h4></a>
+									<div class="rating">
+										<div class="pull-left">
+											<img src="assets/images/svg/star-1.svg">
+											<span class="point">4.0</span>
+											<span class="count">(200 ratings)</span>
+										</div>
+										<div class="pull-right"><span class="rating-label">-50%</span></div>
+										<div class="clearfix"></div>
+									</div>
+									<div class="product-meta">
+										<span>$125,00</span>
+										<span class="sale">$225,00</span>
+									</div>
+								</div>
+							</div>
+							<!-- /END PRODUCT ITEM -->
+						</div>
+						<div class="col-md-2 col-sm-4 col-xs-6">
+							<!-- PRODUCT ITEM -->
+							<div class="product-item">
+								<a href="#">
+									<img src="assets/images/img4.png">
+								</a>
+								<div class="product-info">
+									<div class="store-name">
+										<img src="assets/images/store-logo-sm.png">
+										<h5>Clever Hippo</h5>
+									</div>
+									<a href="#"><h4 class="transition">Nombined strapped backpack</h4></a>
+									<div class="rating">
+										<div class="pull-left">
+											<img src="assets/images/svg/star-1.svg">
+											<span class="point">4.0</span>
+											<span class="count">(200 ratings)</span>
+										</div>
+										<div class="pull-right"><span class="rating-label">-50%</span></div>
+										<div class="clearfix"></div>
+									</div>
+									<div class="product-meta">
+										<span>$125,00</span>
+										<span class="sale">$225,00</span>
+									</div>
+								</div>
+							</div>
+							<!-- /END PRODUCT ITEM -->
+						</div>
+						<div class="col-md-2 col-sm-4 col-xs-6">
+							<!-- PRODUCT ITEM -->
+							<div class="product-item">
+								<a href="#">
+									<img src="assets/images/img4.png">
+								</a>
+								<div class="product-info">
+									<div class="store-name">
+										<img src="assets/images/store-logo-sm.png">
+										<h5>Clever Hippo</h5>
+									</div>
+									<a href="#"><h4 class="transition">Nombined strapped backpack</h4></a>
+									<div class="rating">
+										<div class="pull-left">
+											<img src="assets/images/svg/star-1.svg">
+											<span class="point">4.0</span>
+											<span class="count">(200 ratings)</span>
+										</div>
+										<div class="pull-right"><span class="rating-label">-50%</span></div>
+										<div class="clearfix"></div>
+									</div>
+									<div class="product-meta">
+										<span>$125,00</span>
+										<span class="sale">$225,00</span>
+									</div>
+								</div>
+							</div>
+							<!-- /END PRODUCT ITEM -->
+						</div>
+						<div class="col-md-2 col-sm-4 col-xs-6">
+							<!-- PRODUCT ITEM -->
+							<div class="product-item">
+								<a href="#">
+									<img src="assets/images/img4.png">
+								</a>
+								<div class="product-info">
+									<div class="store-name">
+										<img src="assets/images/store-logo-sm.png">
+										<h5>Clever Hippo</h5>
+									</div>
+									<a href="#"><h4 class="transition">Nombined strapped backpack</h4></a>
+									<div class="rating">
+										<div class="pull-left">
+											<img src="assets/images/svg/star-1.svg">
+											<span class="point">4.0</span>
+											<span class="count">(200 ratings)</span>
+										</div>
+										<div class="pull-right"><span class="rating-label">-50%</span></div>
+										<div class="clearfix"></div>
+									</div>
+									<div class="product-meta">
+										<span>$125,00</span>
+										<span class="sale">$225,00</span>
+									</div>
+								</div>
+							</div>
+							<!-- /END PRODUCT ITEM -->
+						</div>
+					</div>
+
+					<div class="row">
+						<div class="col-md-12 txt-center">
+							<button class="btn btn-loadmore btn-perspective">Load more</button>
+						</div>
+					</div>
+				</div>
+				<!-- END IDEA PRODUCTS TODAY -->
 
 				<!-- BEGIN RECOMMENED PRODUCTS -->
 				<div class="col-md-12">
